# codegen

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: codegen-simple.toml  codegen.toml  output_demo.rs
src/: lib.rs  main.rs
src/cli/: commands.rs  config.rs  discovery.rs  generate.rs  mod.rs  output.rs
src/config/: mod.rs
src/core/: error.rs  graph_builder.rs  ir.rs  mod.rs  parser.rs  resolver.rs
src/generator/: mod.rs  traits.rs
src/languages/: mod.rs
src/languages/typescript/: backend.rs  mod.rs  (+12 more)
src/templates/: genco_engine.rs  mod.rs
tests/: choice_generator_tests.rs  datatype_generator_tests.rs  documentation_generator_tests.rs  generator_tests.rs  graph_builder_tests.rs  helpers_generator_tests.rs  ir_tests.rs  manifest_generator_tests.rs  parser_tests.rs  resolver_tests.rs  resource_generator_tests.rs  template_tests.rs  typescript_backend_tests.rs  validation_generator_tests.rs
tests/fixtures/: patient.json
tests/integration/: basic_test.rs
tests/snapshots/: choice_generator_tests__dose_choice_module.snap  choice_generator_tests__observation_choice_module.snap  choice_generator_tests__observation_value_choice_enum.snap  choice_generator_tests__observation_value_choice_union.snap  choice_generator_tests__observation_value_extractor.snap  choice_generator_tests__observation_value_type_guards.snap  choice_generator_tests__patient_deceased_choice_union.snap  choice_generator_tests__patient_deceased_enum.snap  choice_generator_tests__patient_deceased_inline_choice.snap  choice_generator_tests__patient_deceased_type_guards.snap  choice_generator_tests__patient_deceased_value_extractor.snap  datatype_generator_tests__address_datatype.snap  datatype_generator_tests__datatypes_index.snap  datatype_generator_tests__fhir_primitive_wrapper.snap  datatype_generator_tests__human_name_datatype.snap  datatype_generator_tests__human_name_file_complete.snap  datatype_generator_tests__primitive_types_with_wrapper.snap  datatype_generator_tests__quantity_datatype.snap  datatype_generator_tests__simple_primitive_types.snap  helpers_generator_tests__extract_primitive_value.snap  helpers_generator_tests__generic_helpers.snap  helpers_generator_tests__observation_helpers.snap  helpers_generator_tests__observation_helpers_module.snap  helpers_generator_tests__patient_helpers.snap  helpers_generator_tests__patient_helpers_module.snap  helpers_generator_tests__utilities_module.snap  ir_tests__backbone_element_type.snap  ir_tests__binding_example.snap  ir_tests__binding_extensible.snap  ir_tests__binding_preferred.snap  ir_tests__binding_required.snap  ir_tests__cardinality_optional.snap  ir_tests__cardinality_optional_array.snap  ir_tests__cardinality_required.snap  ir_tests__cardinality_required_array.snap  ir_tests__choice_type.snap  ir_tests__reference_type.snap  ir_tests__serialize_invariant_rule.snap  ir_tests__serialize_search_parameter.snap  ir_tests__serialize_type_graph.snap  (+33 more)
